--- a/.github/workflows/basic1.yaml
+++ b/.github/workflows/basic1.yaml
@@ -1,9 +1,9 @@
-name:  running my second jobs:
-on:  push
+name: "running my second jobs"
+on: push
 jobs:
   task: 
-     runs-on:  ubuntu-latest
-     steps:
-         - run:  echo "helllo world"
-         - run:  echo "hi"
+    runs-on: ubuntu-latest
+    steps:
+      - run:  echo "helllo world"
+      - run:  echo "hi"
      
